force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>A collection of answerable questions related to a Program Engagement, based on an Application Template associated with the Contact&apos;s Program Cohort</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>