force-app/main/default/objects/Application__c/fields/Program_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Program_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Cohort</label>
    <referenceTo>pmdm__ProgramCohort__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>