force-app/main/default/objects/Application__c/fields/Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_Time__c</fullName>
    <label>Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>