force-app/main/default/objects/Application__c/fields/Time_to_Submission__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Submission__c</fullName>
    <description>The time lapsed between creation and submission of the Application record</description>
    <formula>IF( !ISBLANK( Submitted_Date_Time__c ),
 TEXT(Submitted_Date_Time__c - CreatedDate),
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time lapsed between creation and submission of the Application record</inlineHelpText>
    <label>Time to Submission</label>
    <type>Text</type>
</CustomField>